<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="702dp">

        <ImageView
            android:id="@+id/my_photo"
            android:layout_width="361dp"
            android:layout_height="225dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/my_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/you_win" />

        <TextView
            android:id="@+id/name"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:background="#8BC34A"
            android:contentDescription="@string/name"
            android:gravity="center"
            android:text="@string/name"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_photo" />

        <TextView
            android:id="@+id/nick_name"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:background="#8BC34A"
            android:contentDescription="@string/nick_name"
            android:gravity="center"
            android:text="@string/nick_name"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/my_photo" />

        <TextView
            android:id="@+id/my_name"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="9dp"
            android:contentDescription="@string/my_name"
            android:gravity="center"
            android:text="@string/my_name"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="9dp"
            android:contentDescription="@string/my_nickname"
            android:gravity="center"
            android:text="@string/my_nickname"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toEndOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/nick_name" />

        <TextView
            android:id="@+id/about_me"
            android:layout_width="365dp"
            android:layout_height="43dp"
            android:layout_marginTop="18dp"
            android:background="#8BC34A"
            android:contentDescription="@string/about_me"
            android:text="@string/about_me"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_name" />

        <TextView
            android:id="@+id/bio_text"
            android:layout_width="361dp"
            android:layout_height="234dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/bio"
            android:text="@string/bio"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.456"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_me" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>